// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v1 data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "c22918aa52c9fdce78bf82451d8114e00b6d4375a8e5b1d1d96c6cf4755dbe1a",
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v1 data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v2 data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "c22918aa52c9fdce78bf82451d8114e00b6d4375a8e5b1d1d96c6cf4755dbe1a",
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v2 data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v3 data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "c22918aa52c9fdce78bf82451d8114e00b6d4375a8e5b1d1d96c6cf4755dbe1a",
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map lock file v3 data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v2 1`] = `
Object {
  "data": Object {
    "hash": "8da365ef8d327d868461fda5c863f779c2f75acfe6a591e733b31a2882763af3",
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v2 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v3 1`] = `
Object {
  "data": Object {
    "hash": "8da365ef8d327d868461fda5c863f779c2f75acfe6a591e733b31a2882763af3",
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex lock file v3 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex npm lock file v1 1`] = `
Object {
  "data": Object {
    "hash": "62016caa192e50e3af6e4730fa1427455ad431a0e11ad807215c56bee04a8c8e",
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes npm should map successfully complex npm lock file v1 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk@4.1.0",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch@3.0.5",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser@21.0.1",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "c22918aa52c9fdce78bf82451d8114e00b6d4375a8e5b1d1d96c6cf4755dbe1a",
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 1`] = `
Object {
  "data": Object {
    "hash": "1e61b9db38c17534ce427d40ce84f9c03b4c439253f659e9a48513a10a52b465",
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 3`] = `
Object {
  "data": Object {
    "hash": "6c5961e1a6ab89174727587860e480508f945407ce4c2cc7c9f1e46f181e6468",
    "packageName": "@phenomnomnominal/tsquery",
    "version": "4.1.1",
  },
  "name": "npm:@phenomnomnominal/tsquery",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes pnpm should map successfully complex lock file 4`] = `
Array [
  Object {
    "source": "npm:@phenomnomnominal/tsquery",
    "target": "npm:esquery",
    "type": "static",
  },
  Object {
    "source": "npm:@phenomnomnominal/tsquery",
    "target": "npm:typescript",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "hash": "c22918aa52c9fdce78bf82451d8114e00b6d4375a8e5b1d1d96c6cf4755dbe1a",
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map lock file data to external nodes 2`] = `
Array [
  Object {
    "source": "npm:yargs",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:escalade",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:get-caller-file",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:require-directory",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:y18n",
    "type": "static",
  },
  Object {
    "source": "npm:yargs",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map successfully complex lock file 1`] = `
Object {
  "data": Object {
    "hash": "1e61b9db38c17534ce427d40ce84f9c03b4c439253f659e9a48513a10a52b465",
    "packageName": "nx",
    "version": "14.7.5",
  },
  "name": "npm:nx",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes yarn should map successfully complex lock file 2`] = `
Array [
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/cli",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@nrwl/tao",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:@parcel/watcher",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chalk",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:chokidar",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-cursor",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cli-spinners",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:cliui",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:dotenv",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:enquirer",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fast-glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:figures",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:flat",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:fs-extra",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:glob",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:ignore",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:js-yaml",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:jsonc-parser",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:minimatch",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:npm-run-path",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:open",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:semver",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:string-width",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tar-stream",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tmp",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tsconfig-paths",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:tslib",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:v8-compile-cache",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs",
    "type": "static",
  },
  Object {
    "source": "npm:nx",
    "target": "npm:yargs-parser",
    "type": "static",
  },
]
`;
